@@ -14,6 +14,11 @@ small - this just lets others know that the file has changed if nothing
 else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 
+Rename a few xxx_player() functions to xxx_living() for coherence.
+ include/sproto.h
+ server/apply.c attack.c skills.c spell_effect.c spell_util.c
+Nicolas Weeger 2008-03-30
+
 Remove global variables. Make functions static.
  random_maps/maze_gen.c maze_gen.h rproto.h
 Nicolas Weeger 2008-03-30
